--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://marcocrupi.github.io/Amazon-clone-react",
+  "homepage": "https://marcocrupi.github.io/Amazon-clone-react/",
   "name": "amazon-clone",
   "version": "0.1.0",
   "private": true,
